// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> should render with default props 1`] = `
<div
  className="mfui-beta-carousel mfui-beta-carousel_nav-theme_light"
>
  <Swiper
    autoplay={false}
    breakpoints={
      Object {
        "0": Object {
          "slidesPerView": 1,
          "spaceBetween": 16,
        },
        "1280": Object {
          "slidesPerView": 4,
          "spaceBetween": 20,
        },
        "768": Object {
          "slidesPerView": 3,
          "spaceBetween": 20,
        },
      }
    }
    className="mfui-beta-carousel__swiper mfui-beta-carousel__swiper_default-inner-indents"
    loop={false}
    onSwiper={[Function]}
    pagination={
      Object {
        "clickable": true,
      }
    }
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="0/.0"
    >
      <Component>
        1
      </Component>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="1/.1"
    >
      <Component>
        2
      </Component>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_prev"
    disabled={true}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;

exports[`<Carousel /> should render with props 1`] = `
<div
  className="mfui-beta-carousel mfui-beta-carousel_nav-theme_green class"
>
  <Swiper
    autoplay={
      Object {
        "delay": 1000,
        "disableOnInteraction": false,
        "stopOnLastSlide": true,
        "waitForTransition": false,
      }
    }
    breakpoints={
      Object {
        "768": Object {
          "slidesPerView": "auto",
          "spaceBetween": 2,
        },
      }
    }
    className="mfui-beta-carousel__swiper inner-indents-class"
    loop={true}
    onSwiper={[Function]}
    pagination={
      Object {
        "clickable": true,
      }
    }
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="0/.0"
    >
      <Component>
        1
      </Component>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-beta-carousel__slide"
      key="1/.1"
    >
      <Component>
        2
      </Component>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_prev"
    disabled={false}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-beta-carousel__arrow mfui-beta-carousel__arrow_next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;
